# crater-ohos

./: .gitignore  Cargo.toml  README.md  config.toml
docs/: API_GUIDE.md  ARCHITECTURE.md
src/: config.rs  dirs.rs  experiments.rs  lib.rs  macros.rs  main.rs  prelude.rs  toolchain.rs
src/actions/: experiments.rs
src/api/: error.rs  mod.rs  response.rs
src/api/middleware/: auth.rs
src/api/routes/: agents.rs  experiments.rs  health.rs  mod.rs  ui.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: define.rs  manage.rs  mod.rs  prepare.rs  report.rs  run.rs  server.rs
src/crates/: lists.rs  mod.rs
src/crates/sources/: gitcode.rs  github.rs  mod.rs  registry.rs
src/db/: experiments.rs  migrations.rs  mod.rs
src/report/: analyzer.rs  archives.rs  display.rs  html.rs  markdown.rs  mod.rs
src/results/: db.rs  dummy.rs  mod.rs
src/runner/: mod.rs  tasks.rs  test.rs  worker.rs
src/server/: agents.rs  callback.rs  mod.rs  tokens.rs
src/ui/: mod.rs  routes.rs  templates.rs
src/utils/: hex.rs  http.rs  mod.rs  size.rs
static/css/: style.css
templates/ui/: experiment.html  layout.html  queue.html
tests/: api_test.rs  integration_test.rs  service_integration.rs
